hypotesis 3 and 4 done

--- a/notebooks/task3_hypothesis_testing.ipynb
+++ b/notebooks/task3_hypothesis_testing.ipynb
@@ -914,9 +914,323 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "30e6918e",
+   "metadata": {},
+   "source": [
+    "## Hypothesis 3 - margin differences between zip codes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "818a5eb9",
+   "metadata": {},
+   "source": [
+    "Use the same df_zip and one way ANOVA on margin."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "10ca8edd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(1.0505752146338934), np.float64(0.39636410456728266))"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zip_groups_margin = [g[\"margin\"].dropna() for _, g in df_zip.groupby(\"PostalCode\")]\n",
+    "\n",
+    "f_stat_margin, p_margin = stats.f_oneway(*zip_groups_margin)\n",
+    "f_stat_margin, p_margin\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f4c75cf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PostalCode</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>299</th>\n",
+       "      <td>25546</td>\n",
+       "      <td>19.559415</td>\n",
+       "      <td>1289.065617</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7405</th>\n",
+       "      <td>18518</td>\n",
+       "      <td>17.516825</td>\n",
+       "      <td>1042.531125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7100</th>\n",
+       "      <td>10161</td>\n",
+       "      <td>6.798053</td>\n",
+       "      <td>1582.273329</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>458</th>\n",
+       "      <td>13775</td>\n",
+       "      <td>4.546074</td>\n",
+       "      <td>1656.490162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>470</th>\n",
+       "      <td>10226</td>\n",
+       "      <td>3.069148</td>\n",
+       "      <td>1656.918861</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000</th>\n",
+       "      <td>133498</td>\n",
+       "      <td>-8.111944</td>\n",
+       "      <td>2008.326169</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7784</th>\n",
+       "      <td>28585</td>\n",
+       "      <td>-13.471242</td>\n",
+       "      <td>2770.473963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8000</th>\n",
+       "      <td>11794</td>\n",
+       "      <td>-16.036381</td>\n",
+       "      <td>4000.389185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2196</th>\n",
+       "      <td>11048</td>\n",
+       "      <td>-21.341082</td>\n",
+       "      <td>4887.697967</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>49171</td>\n",
+       "      <td>-22.859806</td>\n",
+       "      <td>2531.581028</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             count       mean          std\n",
+       "PostalCode                                \n",
+       "299          25546  19.559415  1289.065617\n",
+       "7405         18518  17.516825  1042.531125\n",
+       "7100         10161   6.798053  1582.273329\n",
+       "458          13775   4.546074  1656.490162\n",
+       "470          10226   3.069148  1656.918861\n",
+       "2000        133498  -8.111944  2008.326169\n",
+       "7784         28585 -13.471242  2770.473963\n",
+       "8000         11794 -16.036381  4000.389185\n",
+       "2196         11048 -21.341082  4887.697967\n",
+       "122          49171 -22.859806  2531.581028"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "describe_groups(df_zip, \"PostalCode\", \"margin\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3628d4a0",
+   "metadata": {},
+   "source": [
+    "Since p_margin is 0.396 which is greater than 0.05, we fail to reject the null hypothesis. There is no significant difference in margin across zip codes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "774f833e",
+   "metadata": {},
+   "source": [
+    "## Hypothesis 4 - risk difference between Women and Men"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2297abaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_gender = df[df[\"Gender\"].isin([\"Female\", \"Male\"])].copy()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67671006",
+   "metadata": {},
+   "source": [
+    "### Frequency - chi square on 2x2 table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "098070b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(0.003704891861036439), np.float64(0.9514644755420456))"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cont_gender = pd.crosstab(df_gender[\"Gender\"], df_gender[\"has_claim\"])\n",
+    "cont_gender\n",
+    "\n",
+    "chi2_gen, p_gen, dof_gen, exp_gen = stats.chi2_contingency(cont_gender)\n",
+    "chi2_gen, p_gen\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdf51363",
+   "metadata": {},
+   "source": [
+    "Since p_gen = 0.956 which is greater than 0.05, we fail to reject the null hypothesis. There is no significant difference in claim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "5a9ab1f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Gender\n",
+       "Female    0.002073\n",
+       "Male      0.002195\n",
+       "Name: claim_frequency, dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(\n",
+    "    df_gender.groupby(\"Gender\")[\"has_claim\"]\n",
+    "    .mean()\n",
+    "    .rename(\"claim_frequency\")\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c10d1f6",
+   "metadata": {},
+   "source": [
+    "Severity - Welch t test"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10ca8edd",
+   "id": "e10237ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(14,\n",
+       " 94,\n",
+       " np.float64(17874.721303258153),\n",
+       " np.float64(14858.552293766337),\n",
+       " np.float64(0.5790202780038484),\n",
+       " np.float64(0.5680286951630673))"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_gender_claims = df_gender[df_gender[\"has_claim\"]].copy()\n",
+    "\n",
+    "n_f, n_m, mean_f, mean_m, t_stat, p_sev_gen = two_sample_test_numeric(\n",
+    "    df_gender_claims,\n",
+    "    group_col=\"Gender\",\n",
+    "    value_col=\"claim_severity\",\n",
+    "    group_a=\"Female\",\n",
+    "    group_b=\"Male\",\n",
+    ")\n",
+    "\n",
+    "n_f, n_m, mean_f, mean_m, t_stat, p_sev_gen\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40c143f5",
+   "metadata": {},
+   "source": [
+    "For claim severity by gender, p_sev_gen ~ 0.57 > 0.05, so we fail to reject the null hypothesis. Although mean severities differ (≈17.9k for females vs. ≈14.9k for males), the difference is not statistically significant."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1235b454",
    "metadata": {},
    "outputs": [],
    "source": []
