Add final analysis

--- a/notebooks/task3_hypothesis_testing.ipynb
+++ b/notebooks/task3_hypothesis_testing.ipynb
@@ -1228,6 +1228,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "261ddc5a",
+   "metadata": {},
+   "source": [
+    "## Analysis Summary\n",
+    "- **Hypothesis 1 (Province):**  \n",
+    "    - Test: Chi-square (frequency), ANOVA (severity)  \n",
+    "    - Groups: Provinces with ≥200 policies  \n",
+    "    - Results:  \n",
+    "        - Claim frequency: p ≈ 5.93e-19, reject H0  \n",
+    "        - Claim severity: p ≈ 6.30e-6, reject H0  \n",
+    "    - Implication: Claim risk (frequency and severity) differs by province. Gauteng has highest frequency.  \n",
+    "    - Recommendation: Adjust premiums by province; investigate high-risk provinces.\n",
+    "\n",
+    "- **Hypothesis 2 (Zip code):**  \n",
+    "    - Test: Chi-square (frequency), ANOVA (severity)  \n",
+    "    - Groups: Top 10 zip codes by policy count  \n",
+    "    - Results:  \n",
+    "        - Claim frequency: p ≈ 4.59e-12, reject H0  \n",
+    "        - Claim severity: p ≈ 5.47e-7, reject H0  \n",
+    "    - Implication: Some zip codes (e.g., 1234) have much higher claim severity.  \n",
+    "    - Recommendation: Raise premiums or tighten underwriting in high-risk zip codes.\n",
+    "\n",
+    "- **Hypothesis 3 (Margin by zip code):**  \n",
+    "    - Test: ANOVA  \n",
+    "    - Groups: Top 10 zip codes  \n",
+    "    - Results: p ≈ 0.40, fail to reject H0  \n",
+    "    - Implication: No significant margin difference across zip codes.  \n",
+    "    - Recommendation: No margin-based pricing adjustment needed for zip codes.\n",
+    "\n",
+    "- **Hypothesis 4 (Gender):**  \n",
+    "    - Test: Chi-square (frequency), Welch t-test (severity)  \n",
+    "    - Groups: Female vs. Male  \n",
+    "    - Results:  \n",
+    "        - Claim frequency: p ≈ 0.95, fail to reject H0  \n",
+    "        - Claim severity: p ≈ 0.57, fail to reject H0  \n",
+    "    - Implication: No significant risk difference by gender.  \n",
+    "    - Recommendation: No gender-based pricing adjustment.\n",
+    "\n",
+    "**Business Actions:**  \n",
+    "- Adjust premiums for provinces and zip codes with higher risk.  \n",
+    "- Use low-risk regions for targeted marketing.  \n",
+    "- Investigate causes of high claims in specific locations (e.g., fraud, weather, driver mix)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1235b454",
