model 1: Claim severity regression

--- a/notebooks/task4_modeling.ipynb
+++ b/notebooks/task4_modeling.ipynb
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "1528383b",
    "metadata": {},
    "outputs": [],
@@ -322,7 +322,7 @@
     "    \"TotalPremium\",\n",
     "    \"CalculatedPremiumPerTerm\",\n",
     "    \"CapitalOutstanding\",\n",
-    "    \"NumberOfVehiclesInFleet\",\n",
+    "    # \"NumberOfVehiclesInFleet\",\n",
     "]\n",
     "\n",
     "feature_cols_cat = [\n",
@@ -345,13 +345,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "cb8da6b6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_cols = feature_cols_num + feature_cols_cat + [\"TotalClaims\", \"CalculatedPremiumPerTerm\", \"has_claim\", \"claim_severity\"]\n",
-    "data = df[model_cols].dropna().copy()"
+    "model_cols = feature_cols_num + feature_cols_cat + [\"TotalClaims\", \"has_claim\", \"claim_severity\"]\n",
+    "data = df[model_cols]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "18f3ef50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fill the missing values in categorical features with 'Unknown'\n",
+    "for col in feature_cols_cat:\n",
+    "    data[col] = data[col].fillna('Unknown')\n",
+    "\n",
+    "# there are commas in some numeric columns, remove them and convert to numeric\n",
+    "for col in feature_cols_num:\n",
+    "    if data[col].dtype == 'object':\n",
+    "        data[col] = data[col].str.replace(',', '')\n",
+    "        data[col] = pd.to_numeric(data[col], errors='coerce')\n",
+    "\n",
+    "# Fill the missing values in numerical features with the median of each column\n",
+    "for col in feature_cols_num:\n",
+    "    data[col] = data[col].fillna(data[col].median())"
    ]
   },
   {
@@ -364,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "5ac1f853",
    "metadata": {},
    "outputs": [],
@@ -378,9 +400,273 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "abb56630",
+   "metadata": {},
+   "source": [
+    "## Model 1: Claim severity regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c94a1072",
+   "metadata": {},
+   "source": [
+    "Only policies with a claim (TotalClaims > 0). Target is TotalClaims. Evaluation: RMSE and R squared. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "0909296a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "severity_df = data[data[\"has_claim\"]].copy()\n",
+    "\n",
+    "X_sev = severity_df[feature_cols_num + feature_cols_cat]\n",
+    "y_sev = severity_df[\"TotalClaims\"]\n",
+    "\n",
+    "X_train_sev, X_test_sev, y_train_sev, y_test_sev = train_test_split(\n",
+    "    X_sev, y_sev, test_size=0.2, random_state=42\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb264345",
+   "metadata": {},
+   "source": [
+    "### Linear Regression baseline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "a4216942",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(38235.10584074988), 0.09098389771591664)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "linreg_sev = Pipeline(\n",
+    "    steps=[\n",
+    "        (\"preprocess\", preprocessor),\n",
+    "        (\"model\", LinearRegression()),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "linreg_sev.fit(X_train_sev, y_train_sev)\n",
+    "\n",
+    "y_pred_lin = linreg_sev.predict(X_test_sev)\n",
+    "rmse_lin = np.sqrt(mean_squared_error(y_test_sev, y_pred_lin))\n",
+    "r2_lin = r2_score(y_test_sev, y_pred_lin)\n",
+    "rmse_lin, r2_lin\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ab5c9f2",
+   "metadata": {},
+   "source": [
+    "### Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "e69b7ca6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(40502.99836339333), -0.020049698452276887)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf_sev = Pipeline(\n",
+    "    steps=[\n",
+    "        (\"preprocess\", preprocessor),\n",
+    "        (\"model\", RandomForestRegressor(\n",
+    "            n_estimators=200,\n",
+    "            max_depth=None,\n",
+    "            random_state=42,\n",
+    "            n_jobs=-1,\n",
+    "        )),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "rf_sev.fit(X_train_sev, y_train_sev)\n",
+    "\n",
+    "y_pred_rf = rf_sev.predict(X_test_sev)\n",
+    "rmse_rf = np.sqrt(mean_squared_error(y_test_sev, y_pred_rf))\n",
+    "r2_rf = r2_score(y_test_sev, y_pred_rf)\n",
+    "rmse_rf, r2_rf\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b970b72",
+   "metadata": {},
+   "source": [
+    "### XGBoost regressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "50902090",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(34295.54217752166), 0.2686549455400935)"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xgb_sev = Pipeline(\n",
+    "    steps=[\n",
+    "        (\"preprocess\", preprocessor),\n",
+    "        (\"model\", XGBRegressor(\n",
+    "            n_estimators=250,\n",
+    "            learning_rate=0.008,\n",
+    "            max_depth=2,\n",
+    "            subsample=0.37,\n",
+    "            colsample_bytree=0.643,\n",
+    "            random_state=2,\n",
+    "            objective=\"reg:squarederror\",\n",
+    "            n_jobs=-1,\n",
+    "        )),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "xgb_sev.fit(X_train_sev, y_train_sev)\n",
+    "\n",
+    "y_pred_xgb = xgb_sev.predict(X_test_sev)\n",
+    "rmse_xgb = np.sqrt(mean_squared_error(y_test_sev, y_pred_xgb))\n",
+    "r2_xgb = r2_score(y_test_sev, y_pred_xgb)\n",
+    "rmse_xgb, r2_xgb\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50306cea",
+   "metadata": {},
+   "source": [
+    "Create a small comparison table:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "41fe40e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>rmse</th>\n",
+       "      <th>r2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LinearRegression</td>\n",
+       "      <td>38235.105841</td>\n",
+       "      <td>0.090984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>RandomForest</td>\n",
+       "      <td>40502.998363</td>\n",
+       "      <td>-0.020050</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>XGBRegressor</td>\n",
+       "      <td>34295.542178</td>\n",
+       "      <td>0.268655</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              model          rmse        r2\n",
+       "0  LinearRegression  38235.105841  0.090984\n",
+       "1      RandomForest  40502.998363 -0.020050\n",
+       "2      XGBRegressor  34295.542178  0.268655"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sev_results = pd.DataFrame(\n",
+    "    {\n",
+    "        \"model\": [\"LinearRegression\", \"RandomForest\", \"XGBRegressor\"],\n",
+    "        \"rmse\": [rmse_lin, rmse_rf, rmse_xgb],\n",
+    "        \"r2\": [r2_lin, r2_rf, r2_xgb],\n",
+    "    }\n",
+    ")\n",
+    "sev_results\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08bf1c6b",
+   "metadata": {},
+   "source": [
+    "As shown in the table above, the XGBoost model outperforms both the Linear Regression and Random Forest models in predicting claim severity. The lower RMSE indicates that the XGBoost model has better accuracy, while the higher R-squared value suggests it explains a greater proportion of variance in the target variable."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0909296a",
+   "id": "f62e2439",
    "metadata": {},
    "outputs": [],
    "source": []
