model 2 and advanced

--- a/notebooks/task4_modeling.ipynb
+++ b/notebooks/task4_modeling.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "97966f65",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6cbc00ac",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
        "[5 rows x 52 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "3287fe72",
    "metadata": {},
    "outputs": [],
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "1528383b",
    "metadata": {},
    "outputs": [],
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "cb8da6b6",
    "metadata": {},
    "outputs": [],
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "18f3ef50",
    "metadata": {},
    "outputs": [],
@@ -386,12 +386,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "5ac1f853",
    "metadata": {},
    "outputs": [],
    "source": [
-    "preprocessor = ColumnTransformer(\n",
+    "preprocessor1 = ColumnTransformer(\n",
     "    transformers=[\n",
     "        (\"num\", StandardScaler(), feature_cols_num),\n",
     "        (\"cat\", OneHotEncoder(handle_unknown=\"ignore\"), feature_cols_cat),\n",
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "0909296a",
    "metadata": {},
    "outputs": [],
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "a4216942",
    "metadata": {},
    "outputs": [
@@ -452,7 +452,7 @@
        "(np.float64(38235.10584074988), 0.09098389771591664)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
    "source": [
     "linreg_sev = Pipeline(\n",
     "    steps=[\n",
-    "        (\"preprocess\", preprocessor),\n",
+    "        (\"preprocess\", preprocessor1),\n",
     "        (\"model\", LinearRegression()),\n",
     "    ]\n",
     ")\n",
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "e69b7ca6",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
        "(np.float64(40502.99836339333), -0.020049698452276887)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
    "source": [
     "rf_sev = Pipeline(\n",
     "    steps=[\n",
-    "        (\"preprocess\", preprocessor),\n",
+    "        (\"preprocess\", preprocessor1),\n",
     "        (\"model\", RandomForestRegressor(\n",
     "            n_estimators=200,\n",
     "            max_depth=None,\n",
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "id": "50902090",
    "metadata": {},
    "outputs": [
@@ -539,7 +539,7 @@
        "(np.float64(34295.54217752166), 0.2686549455400935)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,7 @@
    "source": [
     "xgb_sev = Pipeline(\n",
     "    steps=[\n",
-    "        (\"preprocess\", preprocessor),\n",
+    "        (\"preprocess\", preprocessor1),\n",
     "        (\"model\", XGBRegressor(\n",
     "            n_estimators=250,\n",
     "            learning_rate=0.008,\n",
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "id": "41fe40e6",
    "metadata": {},
    "outputs": [
@@ -639,7 +639,7 @@
        "2      XGBRegressor  34295.542178  0.268655"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,12 +664,309 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "76c5a22a",
+   "metadata": {},
+   "source": [
+    "## Model 2: Premium prediction model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57a8c067",
+   "metadata": {},
+   "source": [
+    "Naive target is CalculatedPremiumPerTerm. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "id": "a7e4667c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_cols_num = [\n",
+    "    \"CustomValueEstimate\",\n",
+    "    \"SumInsured\",\n",
+    "    \"TotalPremium\",\n",
+    "    # \"CalculatedPremiumPerTerm\",\n",
+    "    \"CapitalOutstanding\",\n",
+    "    \"TotalClaims\",\n",
+    "]\n",
+    "\n",
+    "feature_cols_cat = [\n",
+    "    \"Province\",\n",
+    "    \"PostalCode\",\n",
+    "    \"VehicleType\",\n",
+    "    \"Model\",\n",
+    "    \"Gender\",\n",
+    "    \"CoverType\",\n",
+    "]\n",
+    "preprocessor2 = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        (\"num\", StandardScaler(), feature_cols_num),\n",
+    "        (\"cat\", OneHotEncoder(handle_unknown=\"ignore\"), feature_cols_cat),\n",
+    "    ]\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "f62e2439",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "premium_df = data.copy()\n",
+    "\n",
+    "X_prem = premium_df[feature_cols_num + feature_cols_cat]\n",
+    "y_prem = premium_df[\"CalculatedPremiumPerTerm\"]\n",
+    "\n",
+    "X_train_p, X_test_p, y_train_p, y_test_p = train_test_split(\n",
+    "    X_prem, y_prem, test_size=0.2, random_state=42\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "3f031c65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define helper function to train and evaluate regressors:\n",
+    "\n",
+    "def eval_regressor(model_name, model):\n",
+    "    model.fit(X_train_p, y_train_p)\n",
+    "    preds = model.predict(X_test_p)\n",
+    "    rmse = np.sqrt(mean_squared_error(y_test_p, preds))\n",
+    "    r2 = r2_score(y_test_p, preds)\n",
+    "    print(f'{model_name} - RMSE: {rmse}, R2: {r2}')\n",
+    "    return model_name, rmse, r2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7170619f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinearRegression - RMSE: 196.4089666285294, R2: 0.5167600234042531\n",
+      "RandomForest - RMSE: 14.11409987944323, R2: 0.9975045630229971\n",
+      "XGBRegressor - RMSE: 13.881680720576322, R2: 0.9975860718681082\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>rmse</th>\n",
+       "      <th>r2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LinearRegression</td>\n",
+       "      <td>196.408967</td>\n",
+       "      <td>0.516760</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>RandomForest</td>\n",
+       "      <td>14.114100</td>\n",
+       "      <td>0.997505</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>XGBRegressor</td>\n",
+       "      <td>13.881681</td>\n",
+       "      <td>0.997586</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              model        rmse        r2\n",
+       "0  LinearRegression  196.408967  0.516760\n",
+       "1      RandomForest   14.114100  0.997505\n",
+       "2      XGBRegressor   13.881681  0.997586"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "models_p = []\n",
+    "\n",
+    "lin_p = Pipeline([(\"preprocess\", preprocessor2), (\"model\", LinearRegression())])\n",
+    "models_p.append(eval_regressor(\"LinearRegression\", lin_p))\n",
+    "\n",
+    "rf_p = Pipeline([(\"preprocess\", preprocessor2), (\"model\", RandomForestRegressor(\n",
+    "    n_estimators=4, random_state=42, n_jobs=-1))])\n",
+    "models_p.append(eval_regressor(\"RandomForest\", rf_p))\n",
+    "\n",
+    "xgb_p = Pipeline([(\"preprocess\", preprocessor2), (\"model\", XGBRegressor(\n",
+    "    n_estimators=150, learning_rate=0.1, max_depth=32,\n",
+    "    subsample=0.6, colsample_bytree=0.8, random_state=2,\n",
+    "    objective=\"reg:squarederror\", n_jobs=-1,))])\n",
+    "models_p.append(eval_regressor(\"XGBRegressor\", xgb_p))\n",
+    "\n",
+    "prem_results = pd.DataFrame(models_p, columns=[\"model\", \"rmse\", \"r2\"])\n",
+    "prem_results\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf9c6e02",
+   "metadata": {},
+   "source": [
+    "The best model is XGBoost with RMSE of around 13.88 and R2 of 0.9975."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6a6a6c1",
+   "metadata": {},
+   "source": [
+    "## Advanced: claim probability model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53c7ec04",
+   "metadata": {},
+   "source": [
+    "This is the advanced part suggested in the brief. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "db6a547d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_cols_num = [\n",
+    "    \"CustomValueEstimate\",\n",
+    "    \"SumInsured\",\n",
+    "    \"TotalPremium\",\n",
+    "    \"CalculatedPremiumPerTerm\",\n",
+    "    \"CapitalOutstanding\",\n",
+    "    \"TotalClaims\",\n",
+    "]\n",
+    "\n",
+    "feature_cols_cat = [\n",
+    "    \"Province\",\n",
+    "    \"PostalCode\",\n",
+    "    \"VehicleType\",\n",
+    "    \"Model\",\n",
+    "    \"Gender\",\n",
+    "    \"CoverType\",\n",
+    "]\n",
+    "preprocessor3 = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        (\"num\", StandardScaler(), feature_cols_num),\n",
+    "        (\"cat\", OneHotEncoder(handle_unknown=\"ignore\"), feature_cols_cat),\n",
+    "    ]\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0dfd51ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prob_df = data.copy()\n",
+    "\n",
+    "X_prob = prob_df[feature_cols_num + feature_cols_cat]\n",
+    "y_prob = prob_df[\"has_claim\"].astype(int)\n",
+    "\n",
+    "X_train_c, X_test_c, y_train_c, y_test_c = train_test_split(\n",
+    "    X_prob, y_prob, test_size=0.2, random_state=42, stratify=y_prob\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "b9b3a2f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.0, 1.0, 1.0, 1.0, 1.0)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf_clf = Pipeline(\n",
+    "    steps=[\n",
+    "        (\"preprocess\", preprocessor3),\n",
+    "        (\"model\", RandomForestClassifier(\n",
+    "            n_estimators=300,\n",
+    "            random_state=42,\n",
+    "            n_jobs=-1,\n",
+    "        )),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "rf_clf.fit(X_train_c, y_train_c)\n",
+    "y_pred_c = rf_clf.predict(X_test_c)\n",
+    "y_proba_c = rf_clf.predict_proba(X_test_c)[:, 1]\n",
+    "\n",
+    "acc = accuracy_score(y_test_c, y_pred_c)\n",
+    "prec = precision_score(y_test_c, y_pred_c)\n",
+    "rec = recall_score(y_test_c, y_pred_c)\n",
+    "f1 = f1_score(y_test_c, y_pred_c)\n",
+    "roc_auc = roc_auc_score(y_test_c, y_proba_c)\n",
+    "\n",
+    "acc, prec, rec, f1, roc_auc\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f1854e3",
+   "metadata": {},
+   "source": [
+    "Conceptually, the risk based premium for a policy can be described as:\n",
+    "```python\n",
+    "risk_based_premium = claim_probability * claim_severity\n",
+    "```\n"
+   ]
   }
  ],
  "metadata": {
